🚧 add second example

--- a/example1/index.html
+++ b/example1/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <script src="./paper-full.min.js"></script>
+  <script src="../js/paper-full.min.js"></script>
   <script type="text/paperscript" canvas="myCanvas">
     // Code ported to Paper.js from http://the389.com/9/1/
 // with permission.
